fixed about page bio overflow and footer issues. worked on modal positioning and such

--- a/stylesheets/partials/modules/_modals.scss
+++ b/stylesheets/partials/modules/_modals.scss
@@ -63,6 +63,11 @@
     text-decoration: underline;
   }
 
+  a.close-modal {
+    top: 0;
+    right: 0;
+  }
+
 }
 
 a.Republican-color, h1.Republican-color {
@@ -78,7 +83,8 @@ a.Independent-color, h1.Independent-color {
 }
 
 #first-time-modal {
-  position: absolute;
+  position: relative;
+  margin: 0 auto;
   top: 60vh;
   z-index: 2;
   width: 75%;
